# qmmp-tfmx

./: README.md  decodertfmxfactory.cpp  decodertfmxfactory.h  settingsdialog.cpp  tfmx.pro  tfmxhelper.cpp  tfmxhelper.h  tfmxmetadatamodel.h
libtfmx/: CMakeLists.txt  Dump.h  MyEndian.h  tfmx.h  tfmx_audio.c  tfmx_audio.h  tfmx_iface.c  tfmx_iface.h  tfmx_loader.c  tfmx_player.c  tfmx_player.h  tfmx_state.c
libtfmx/Chris/: Songs.cpp
